--- a/ex023/tabela002.html
+++ b/ex023/tabela002.html
@@ -12,6 +12,12 @@
         body > h1{
             text-align: center;
         }
+        caption{
+            color: black;
+            font-size: 1.5em;
+            padding: 10px;
+            background-color: rgba(112, 109, 109, 0.171);
+        }
         table{
             width: 500px;
             border-collapse: collapse;
@@ -25,8 +31,19 @@
             background-color: gray;
             color: white;
         }
+        tbody > tr:nth-child(odd){
+            /*odd pode se usar 2n - 1*/
+            background-color: gray;
+        }
+
         tbody .num{
             text-align: right;
+        }
+        tfoot .num{
+            text-align: right;
+        }
+        .populacao{
+            width: 100px;
         }
     </style>
 </head>
@@ -41,10 +58,11 @@
             TFOOT
                 TR, TD, TH -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <td>Estado</td>
-                <td>População</td>
+                <th scope="col">Estado</th>
+                <th scope="col" class="populacao">População</th>
             </tr>
         </thead>
         <tbody>
@@ -159,7 +177,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <td>Total de Habitantes</td>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>190.732.694</strong></td>
             </tr>
         </tfoot>
