--- a/ex024/iframe003.html
+++ b/ex024/iframe003.html
@@ -30,7 +30,8 @@
     <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis in perferendis accusantium repellat numquam, laboriosam ducimus, incidunt dolor reprehenderit unde necessitatibus earum. Sequi praesentium repellendus magni tenetur iusto debitis. Vero.
     </p>
-    <iframe id="tela" name="frame" src="" frameborder="1">
+    <iframe id="tela" name="frame" srcdoc="<h1> escolha uma das opções acima </h1>
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus ab corporis nam, autem aliquid minus eveniet tempora iure officia delectus facilis nesciunt totam quod, blanditiis veritatis a quis, obcaecati reprehenderit? </p> <img src='imagens/Capturar.PNG'> " frameborder="1">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
     <p>
