--- a/desafios/d014/index.html
+++ b/desafios/d014/index.html
@@ -11,10 +11,18 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe name="frame" id="tela" src="iframe01.html" frameborder="0"></iframe>
+            <iframe name="tela" id="tela" src="iframe01.html" frameborder="0">
+                Seu navegador não e compativel
+            </iframe>
         </section>
-        <section>
-
+        <section id="rede-sociais">
+            <a href="" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
+            <a href="" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>
+            <a href="" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
+            <a href="" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a>
+            <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
+            <a href="" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a>
+            
         </section>
     </main>
 </body>
