--- a/desafios/d014/index.html
+++ b/desafios/d014/index.html
@@ -11,15 +11,15 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe name="tela" id="tela" src="iframe01.html" frameborder="0">
+            <iframe name="tela" id="tela" src="home.html" frameborder="0">
                 Seu navegador não e compativel
             </iframe>
         </section>
         <section id="rede-sociais">
-            <a href="" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
-            <a href="" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>
             <a href="" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
-            <a href="" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a>
+            <a href="youtubt.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a>
             <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
             <a href="" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a>
             
