--- a/desafios/d014/index.html
+++ b/desafios/d014/index.html
@@ -18,10 +18,10 @@
         <section id="rede-sociais">
             <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
             <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>
-            <a href="" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
             <a href="youtubt.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a>
-            <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
-            <a href="" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
+            <a href="twiteer.html" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a>
             
         </section>
     </main>
