--- a/ex025/form001.html
+++ b/ex025/form001.html
@@ -8,13 +8,22 @@
         body{
             font-family: Arial, Helvetica, sans-serif;
         }
+        input:hover{
+            background-color: rgb(247, 241, 241);
+        }
     </style>
     <title>Document</title>
 </head>
 <body>
-    <form>
-        <p> Nome: <input type="text"> </p>
-        <p>Sobrenome: <input type="text" name="" id=""> </p>
+    <!--O uso de label e sempre importante na criação de formulários-->
+    <h1>Meu primeiro formulário</h1>
+    <form action="cadastro.php">
+        <p> <label for="nome">Nome:</label> 
+            <input type="text" name="nome" id="nome"> 
+         </p>
+        <p><label for="Sobrenome">Sobrenome: </label>
+            <input type="text" name="Sobrenome" id="Sobrenome">
+         </p>
         <input type="submit" value="Enviar">
     </form>
 </body>
