--- a/ex025/form001.html
+++ b/ex025/form001.html
@@ -12,17 +12,17 @@
             background-color: rgb(247, 241, 241);
         }
     </style>
-    <title>Document</title>
+    <title>Formulário</title>
 </head>
 <body>
     <!--O uso de label e sempre importante na criação de formulários-->
     <h1>Meu primeiro formulário</h1>
-    <form action="cadastro.php">
+    <form action="cadastro.php" method="post" autocomplete="off">
         <p> <label for="nome">Nome:</label> 
-            <input type="text" name="nome" id="nome"> 
+            <input  type="text" name="nome" id="nome"> 
          </p>
         <p><label for="Sobrenome">Sobrenome: </label>
-            <input type="text" name="Sobrenome" id="Sobrenome">
+            <input  type="text" name="Sobrenome" id="Sobrenome">
          </p>
         <input type="submit" value="Enviar">
     </form>
