--- a/ex025/form003.html
+++ b/ex025/form003.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <h1>Teste de Formulário</h1>
-    <form action="cadastro.php" method="get">
+    <form action="cadastro.php" method="get" autocomplete="on">
         <p>
             <label for="nome">Nome:</label>
-            <input type="text" name="nome" id="nome" max="30" placeholder="Nome completo">
+            <input type="text" name="nome" id="nome" max="30" placeholder="Nome completo" autocomplete="name">
         </p>
         <p>
             <label for="imedia">Média</label>
-            <input type="number" name="numero" id="imedia" step="0.5">
+            <input type="number" name="numero" id="imedia" step="0.5" placeholder="0 a 10">
         </p>
         <p>
             <input type="submit" value="Enviar">
