--- a/ex025/form003.html
+++ b/ex025/form003.html
@@ -8,14 +8,27 @@
 </head>
 <body>
     <h1>Teste de Formulário</h1>
-    <form action="cadastro.php" method="get" autocomplete="on">
+    <form action="" method="get" autocomplete="on">
         <p>
             <label for="nome">Nome:</label>
             <input type="text" name="nome" id="nome" max="30" placeholder="Nome completo" autocomplete="name">
         </p>
         <p>
             <label for="imedia">Média</label>
-            <input type="number" name="numero" id="imedia" step="0.5" placeholder="0 a 10">
+            <input type="number" name="nota" id="imedia" min="0" max="10" required step="0.5" placeholder="0 a 10">
+        </p>
+        <p>
+            <label for="imes">Periudo letivo</label>
+            <input type="month" name="mes" id="imes">
+        </p>
+        <p>
+            <label for="idia">Dia da prova</label>
+            <input type="date" name="data" id="idia">
+        </p>
+
+        <p>
+            <label for="ihora">Horario da prova</label>
+            <input type="time" name="hora" id="ihora">
         </p>
         <p>
             <input type="submit" value="Enviar">
