--- a/ex026/mq004/index.html
+++ b/ex026/mq004/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/midiaquery.css">
+    <title>Midia query</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Testando midias queries</h1>
+        <img id="phone" src="imagens/icon-phone.png" alt="">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="">
+        <img id="print" src="imagens/icon-print.png" alt="">
+        <img id="pc" src="imagens/icon-pc.png" alt="">
+        <img id="tv" src="imagens/icon-tv.png" alt="">
+    </main>
 </body>
 </html>
