--- a/ex026/mq005/index.html
+++ b/ex026/mq005/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/midia-quirei.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu site</h1>
         <span id="burgue" class="material-symbols-outlined" onclick="clickMenu()">
@@ -39,6 +40,14 @@
         </article>
     </main>
     <script>
+        function mudouTamanho(){
+            let menu = document.getElementById('menu')
+            if (window.innerWidth >= 768){
+                menu.style.display = 'block'
+            }else{
+                menu.style.display = 'none'
+            }
+        }
         function clickMenu(){
             if (menu.style.display =='block'){
                 menu.style.display = 'none'
